--- a/backend/resources/views/emails/meetup_cancelsubscription.edge
+++ b/backend/resources/views/emails/meetup_cancelsubscription.edge
@@ -1,6 +1,6 @@
 <p>Olá {{ user.name }},
 
-<p>Essa é uma confirmação da sua inscrição no meetup.</p>
+<p>Sua inscrição foi cancelada para o meetup.</p>
 
 <h3>{{ meetup.title }}</h3>
 <p>{{ meetup.description }}</p>
